--- a/contact/index.html
+++ b/contact/index.html
@@ -30,22 +30,22 @@
 <!-- Navbar -->
   <div class="navbar-width d-none d-lg-block d-xl-block" role="navigation">
     <ul class="nav-fill">
-      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/projects/">Projects</a></li>
-      <li class="nav-li"><a class="nav-link active" href="https://rosealacroix.com/gallery/">Gallery</a></li>
-      <li class="nav-li"><a class="nav-link-empty" href="https://rosealacroix.com/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
-      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/about-me/">About me</a></li>
-      <li class="nav-li"><a class="nav-link" href="https://rosealacroix.com/contact/">Contact</a></li>
+      <li class="nav-li"><a class="nav-link" href="/projects/">Projects</a></li>
+      <li class="nav-li"><a class="nav-link active" href="/gallery/">Gallery</a></li>
+      <li class="nav-li"><a class="nav-link-empty" href="/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
+      <li class="nav-li"><a class="nav-link" href="/about-me/">About me</a></li>
+      <li class="nav-li"><a class="nav-link" href="/contact/">Contact</a></li>
     </ul>
   </div>
 
   <nav class="mobile-menu d-lg-none d-xl-nones" role="navigation">
     <header>Menu<span>x</span></header>
     <ol>
-      <li class="menu-item"><a href="https://rosealacroix.com/">Home</a></li>
-      <li class="menu-item"><a href="https://rosealacroix.com/projects/">Projects</a></li>
-      <li class="menu-item"><a href="https://rosealacroix.com/gallery/">Gallery</a></li>
-      <li class="menu-item"><a href="https://rosealacroix.com/about-me/">About me</a></li>
-      <li class="menu-item"><a href="https://rosealacroix.com/contact/">Contact</a></li>
+      <li class="menu-item"><a href="/">Home</a></li>
+      <li class="menu-item"><a href="/projects/">Projects</a></li>
+      <li class="menu-item"><a href="/gallery/">Gallery</a></li>
+      <li class="menu-item"><a href="/about-me/">About me</a></li>
+      <li class="menu-item"><a href="/contact/">Contact</a></li>
     </ol>
     <footer><button aria-label="Toggle Menu">Toggle</button></footer>
   </nav>
