--- a/projects/Prey For The Gods/prey-for-the-gods.html
+++ b/projects/Prey For The Gods/prey-for-the-gods.html
@@ -10,10 +10,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <meta name="description" content="Website of Rose A. Lacroix: developer, writer, artist. Home of coding and novel projects, 3D renders, photography and more." />
       <meta name="author" content="Rose A. Lacroix" />
-      <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico" />
+      <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico" />
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
-      <link rel="stylesheet" href="../styles/style.css" />
+      <link rel="stylesheet" href="styles/style.css" />
 
   </head>
 
@@ -21,9 +21,9 @@
 
 <!-- Banner -->
   <div class="banner-main">
-        <img class ="banner-main d-none d-lg-block d-xl-block" src="../assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
-        <img class ="banner-main-mobile d-lg-none d-xl-none" src="../assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
-        <img class="logo-mobile-nav d-lg-none d-xl-none" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo">
+        <img class ="banner-main d-none d-lg-block d-xl-block" src="assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
+        <img class ="banner-main-mobile d-lg-none d-xl-none" src="assets/images/banner_test.jpg" alt="A steaming cup of tea on an opened notebook, next to a pen cased inside a paper flower">
+        <img class="logo-mobile-nav d-lg-none d-xl-none" src="assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo">
   </div>
 <!-- Banner -->
 
@@ -32,7 +32,7 @@
     <ul class="nav-fill">
       <li class="nav-li"><a class="nav-link" href="/projects/">Projects</a></li>
       <li class="nav-li"><a class="nav-link active" href="/gallery/">Gallery</a></li>
-      <li class="nav-li"><a class="nav-link-empty" href="/"><img class="logo-nav" src="../assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
+      <li class="nav-li"><a class="nav-link-empty" href="/"><img class="logo-nav" src="assets/images/logo_nav.png" alt="Rose A. Lacroix: developer, artist, writer. Flowers frame the logo"></a></li>
       <li class="nav-li"><a class="nav-link" href="/about-me/">About me</a></li>
       <li class="nav-li"><a class="nav-link" href="/contact/">Contact</a></li>
     </ul>
@@ -50,20 +50,35 @@
     <footer><button aria-label="Toggle Menu">Toggle</button></footer>
   </nav>
 <!-- Navbar -->
+<div class="container project-body">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-11">
 
-<!-- Contact form -->
-  <div class="container contact-form">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-11">
-        <h1 class="title-contact">How to contact me</h1>
-        <p><i class="fas fa-check"></i> You can send an email to <a href="mailto:contact@rosealacroix.com" target="_top">contact@rosealacroix.com</a>.</br>
-        <i class="fas fa-check"></i> Do you like <a target="_blank" href="https://www.facebook.com/rosealacroix">Facebook</a> and <a target="_blank" href="https://twitter.com/RoseALacroix">Twitter</a>? I don't, but you can still contact me through these.</br>
-        <i class="fas fa-check"></i> I reblog so many things that trying to find something on my <a target="_blank" href="https://rose-writes-and-drinks-tea.tumblr.com/">Tumblr</a> is like dumpster diving. I use tags to keep the landfill organised though, and a lot of my inspiration comes from there. It could be nice to have new followers that aren't porn bots.</br>
-        <i class="fas fa-check"></i> I have Discord all the time with me. Probably the quickest way to get my attention, especially if you're fluent in gif reactions. My username is <b>Rose A. Lacroix#2649</b>.</p>
-      </div>
+      <p>Genre: Adult, Contemporary dark fantasy, Mystery.</br>
+      Status: Research and outlining.</p>
+
+      <p>Prey For The Gods is the first book of <b>The Aroostook Witch</b> series.</p>
+
+      <p>Detective Grace Nichols isn't looking forward to start her new job at the Presque Isle Police Department. The city in itself doesn't look bad, mind you, albeit a little isolated. But its surroundings full of magic, as part of the untamed countryside of North Maine, are just a call for trouble that city people are not used to.</br>
+      But there's no time to brood,
+      A missing person case ***, and they will need all the help they can get.
+
+      </p>
+
+      <p>Main characters
+
+      Astrid Reynarsdóttir
+      Nathaniel Sharpe
+      Grace Nichols
+      Connor Woo
+      Charlie Reid</p>
+
     </div>
   </div>
-<!-- Contact form -->
+</div>
+<!-- Project body -->
+
+<!-- Project body -->
 
 <!-- Footer -->
   <footer class="footer-content text-center">
@@ -78,14 +93,14 @@
 <!-- Footer -->
 
   <div class="d-none d-sm-block">
-    <a href="https://ko-fi.com/rosealacroix" target="_blank" title="Want to buy me a tea?"><img class="kofi-icon" src="../assets/images/kofi_button.png" alt="Drawing of a steaming mug of tea"></a>
+    <a href="https://ko-fi.com/rosealacroix" target="_blank" title="Want to buy me a tea?"><img class="kofi-icon" src="assets/images/kofi_button.png" alt="Drawing of a steaming mug of tea"></a>
   </div>
 
 <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="../scripts/script.js"></script>
+  <script type="text/javascript" src="scripts/script.js"></script>
 <!-- Scripts -->
 
   </body>
