--- a/projects/Prey For The Gods/prey-for-the-gods.html
+++ b/projects/Prey For The Gods/prey-for-the-gods.html
@@ -62,20 +62,16 @@
       <p>Prey For The Gods is the first book of <b>The Aroostook Witch</b> series.</p>
 
       <p>Detective Grace Nichols isn't looking forward to start her new job at the Presque Isle Police Department. The city in itself doesn't look bad, mind you, albeit a little isolated. But its surroundings full of magic, as part of the untamed countryside of North Maine, are just a call for trouble that city people are not used to.</br>
-      A missing person case doesn't leave her the time to adjust, and brings her right into action.
-
-      But there's no time to brood, as her first case will introduce her to a Singular for a work partner, and a secluded witch who often serves as a consultant.
-      A missing person case ***, and they will need all the help they can get.
-
+      Unfortunately, a missing person case doesn't leave her the time to adjust and brings her right into action. With the help of her new work partner and a mysterious couple hired as consultants, Grace finds herself in a whole new reality, where things are rarely what they seem.
       </p>
 
       <p>Main characters
 
       Astrid Reynarsdóttir
-      Astrid leads a secluded life in Eagle Lake. Her reputation as a witch is well established and trusted, but the side effects of her presence make most people avoid her. 
+      Astrid leads a secluded life in Eagle Lake. Her reputation as a witch is well established and trusted, but the side effects of her abilities make most people avoid her. She has a long history of dealing with the occult, and is not entirely human herself.
 
       Nathaniel Sharpe
-
+      Nathan is a fae from the Summer Court.
 
       Grace Nichols
       Connor Woo
